--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Mario vs Bowser - an exclusive Nintendo Event!</title>
+        <script defer data-domain="mariotime.com" src="https://plausible.io/js/plausible.js"></script>
     </head>
 
     <body>
